Fixed the search API
